fix spacing bug

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -247,12 +247,8 @@ h6 {
       padding: 0.5rem 0 0;
       overflow: auto;
 
-      &::-webkit-scrollbar {
-        width: 0;
-        background-color: transparent;
-      }
-
       > .left-column {
+        display: block;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
         background: #fff;
